# goph547-w2026-lab01-stVP

./: README.md  pyproject.toml
examples/: driver_mass_anomaly.py  driver_multi_mass.py  driver_single_mass.py  generate_mass_sets.py  mass_set_1.mat  mass_set_2.mat  mass_set_3.mat
src/goph547lab01/: gravity.py
tests/: test_gravity_functions.py
